--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollify/1.0.19/jquery.scrollify.js"></script>
   </body>
 </html>
